[gd_scene load_steps=4 format=3 uid="uid://bf4ym1y8secdj"]

[ext_resource type="Texture2D" uid="uid://csavctk3xk5yw" path="res://Textures/GUI/EmptyItem.png" id="1_64xlu"]
[ext_resource type="Script" path="res://Player/item_container.gd" id="2_o10gf"]
[ext_resource type="FontFile" uid="uid://ca4en6mqmcvdd" path="res://Font/Ronysiswadi14-z82L3.ttf" id="3_3rn6h"]

[node name="ItemContainer" type="TextureRect"]
custom_minimum_size = Vector2(35, 35)
offset_right = 35.0
offset_bottom = 35.0
texture = ExtResource("1_64xlu")
script = ExtResource("2_o10gf")

[node name="ItemTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 91.0
offset_bottom = 91.0
scale = Vector2(0.33, 0.33)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 1
z_as_relative = false
layout_mode = 0
offset_left = 1.0
offset_top = 36.0
offset_right = 201.0
offset_bottom = 136.0
color = Color(0.0980392, 0.0980392, 0.0980392, 0.701961)

[node name="Label" type="Label" parent="ColorRect"]
texture_filter = 2
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 194.0
offset_bottom = 92.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3rn6h")
theme_override_font_sizes/font_size = 20
text = "Info del Upgrade"
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
